# hawkc

./: .gitignore  .travis.yml  CHANGES.txt  Makefile.in  README.md  configure  configure.ac
hawk/: hawk.c
hawkc/: authorization.c  base64.c  base64.h  base64url.c  base64url.h  common.c  common.h  config.h  config.h.in  crypto.h  crypto_openssl.c  hawkc.h  parser.c  www_authenticate.c
test/: test.h  test_authorization_header_parse  test_authorization_header_parse.c  test_base64  test_base64.c  test_base64url  test_base64url.c  test_crypto  test_crypto.c  test_fixed_time_equal  test_parser  test_parser.c  test_signing  test_signing.c  test_www_authenticate_header  test_www_authenticate_header.c
